# api

./: .dockerignore  .env  .gitignore  =0.37.2  Dockerfile  README.md  alembic.sh  api.tfsfinserv.com.conf  application.py  db_connection_test.py  env.example  logging_config.ini  mails.txt  nginx.conf  pyproject.toml  requirements_latest.txt  send_mail.py
project/: alembic.ini  aploger.py  requirement.txt  test.py
project/alembic/: env.py
project/common/: auth.py  mail.py  razorpay_service.py  utility.py
project/constant/: messages.py  status_constant.py
project/database/: database.py
project/email_templates/: add_user.html  admin_coupon.html  admin_coupon_status.html  admin_coupon_update.html  beneficiary_beneficiary_added.html  beneficiary_beneficiary_update.html  beneficiary_status_changed.html  beneficiary_verification_otp.html  customrer_payment_link.html  email_verification_otp.html  enquirey.html  enquirey_otp.html  footer.html  forgot_password.html  header.html  invalid_login_attempts.html  invitation_template.html  invite_user.html  kyc.html  kyc_doc_status_updated.html  kyc_docs_user_uploaded_admin.html  kyc_documents_uploaded.html  payment_request.html  reset_password_success.html  send_money.html  signup.html  signup_welcome.html  ticket_created.html  transaction_activate.html  transaction_status_activated.html  transcation_attachment.html  user_coupon.html  user_kyc_status_approved.html  user_kyc_status_onhold.html  user_kyc_status_rejection.html  user_kyc_status_updated.html
project/endpoints/: __init__.py
project/master_data/: md_countries.json  (+21 more)
(+82 files in other folders)
